# bmstu-oop

./: README.md
lab_01/: CMakeLists.txt  main.cpp  readme.md
lab_01/drawer/: drawer.cpp  drawer.h
lab_01/figures/: cube.txt  nocube2.txt  notcube.txt  tetraider.txt
lab_01/geometry/: edge.cpp  edge.h  edges.cpp  edges.h  figure.cpp  figure.h  modifications.h  point.cpp  point.h  points.cpp  points.h
lab_01/interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_01/logic/: actions.cpp  actions.h  errors.cpp  errors.h
lab_02/: CMakeLists.txt  main.cpp  readme.md
lab_02/Containers/: BaseContainer.h  container_concept.h
lab_02/Exceptions/: exceptions.cpp  exceptions.h
lab_02/Iterators/: BaseIterator.h  BaseIterator.hpp  iterator_concept.h  iterator_concepts.h
lab_02/Tests/: tests_vector_assignments.hpp  tests_vector_comparisons.hpp  tests_vector_constructors.hpp  tests_vector_elements_access.hpp  tests_vector_iterators.hpp  tests_vector_maths.hpp
lab_02/Vector/: ConstVectorIterator.h  ConstVectorIterator.hpp  Vector.h  Vector.hpp  VectorIterator.h  VectorIterator.hpp  vector_concepts.h  vector_exceptions.cpp  vector_exceptions.h  vector_iterator_exceptions.cpp  vector_iterator_exceptions.h
lab_03/: CMakeLists.txt
lab_03/Cameras/: Camera.hpp  ParallelProjectionCamera.cpp  ParallelProjectionCamera.hpp
lab_03/Commands/: Command.hpp
lab_03/Commands/ModelCommands/: ModelCommand.hpp
lab_03/Objects/: InvisibleObject.cpp  InvisibleObject.hpp  Model.hpp  Object.cpp  Object.hpp  ObjectComposite.cpp  ObjectComposite.hpp  VisibleObject.cpp  VisibleObject.hpp
lab_03/Objects/CareTaker/: ObjectCareTaker.cpp  ObjectMemento.cpp  ObjectMemento.hpp
lab_03/Transformations/: RotateTransformer.cpp  RotateTransformer.hpp  Transformer.hpp
lab_03/Visitors/: TransformVisitor.cpp  TransformVisitor.hpp  Visitor.hpp
lab_03/WireframeModel/: WireframeModel.cpp  WireframeModel.hpp  WireframeModelImplementation.cpp  WireframeModelImplementation.hpp
lab_03/docs/: diagram.drawio
lab_03/geometry/: Point.cpp  Point.hpp
lab_03/src/: CMakeLists.txt  main.cpp
lab_03/src/Cameras/: ParallelProjectionCamera.cpp  ParallelProjectionCamera.hpp
lab_03/src/Commands/: Command.cpp  Command.hpp  Commands.hpp  Facade.cpp  Facade.hpp
lab_03/src/Commands/AllModels/: AllModelsCommand.hpp  AllModelsCommands.hpp
lab_03/src/Commands/AllModels/Move/: AllModelsMoveCommand.cpp  AllModelsMoveCommand.hpp
lab_03/src/Commands/Camera/: CameraCommand.hpp  CameraCommands.hpp
lab_03/src/Commands/CameraCommands/: CameraCommand.hpp
lab_03/src/Commands/History/: HistoryCommand.hpp  HistoryCommands.hpp
lab_03/src/Commands/HistoryCommands/: HistoryCommand.hpp
lab_03/src/Commands/Model/: ModelCommand.hpp  ModelCommands.hpp
lab_03/src/Commands/Scene/: SceneCommand.hpp  SceneCommands.hpp
lab_03/src/Commands/SceneCommands/: SceneCommand.hpp
lab_03/src/Common/: Concepts.hpp  Container.hpp  Container.inl
lab_03/src/Creators/DrawerFactories/: ShapeDrawerFactory.hpp
lab_03/src/Creators/Objects/: ObjectCreator.cpp  ObjectCreator.hpp
lab_03/src/Creators/Transformations/: TransformationCreator.hpp  TransformationSolution.cpp  TransformationSolution.hpp
lab_03/src/Drawer/: QtShapeDrawerFactory.cpp  QtShapeDrawerFactory.hpp  ShapeDrawerFactory.cpp  ShapeDrawerFactory.hpp
lab_03/src/Drawer/Line/: LineDrawer.cpp  LineDrawer.hpp  QtLineDrawer.cpp  QtLineDrawer.hpp
lab_03/src/Drawer/ScreenCleaner/: QtScreenCleaner.cpp  QtScreenCleaner.hpp  ScreenCleaner.cpp  ScreenCleaner.hpp
lab_03/src/Exceptions/: Exception.cpp  Exception.hpp
lab_03/src/Geometry/: Point.cpp  Point.hpp  Point2D.cpp  Point2D.hpp  TransformationMatrix.cpp  TransformationMatrix.hpp  Vector.cpp  Vector.hpp
lab_03/src/Managers/: HistoryManager.hpp  ManagerSolution.cpp  ManagerSolution.hpp  SceneManager.hpp
lab_03/src/Managers/CameraManager/: CameraManager.cpp  CameraManager.hpp
lab_03/src/Managers/DrawManager/: DrawManager.cpp  DrawManager.hpp
lab_03/src/Managers/HistoryManager/: HistoryManager.cpp  HistoryManager.hpp
lab_03/src/Managers/LoadManager/: LoadManager.cpp  LoadManager.hpp
lab_03/src/Managers/SceneManager/: SceneManager.cpp  SceneManager.hpp
lab_03/src/Managers/TransformManager/: TransformManager.cpp  TransformManager.hpp
lab_03/src/Objects/: InvisibleObject.cpp  InvisibleObject.hpp  Model.hpp  Object.cpp  Object.hpp  ObjectComposite.cpp  ObjectComposite.hpp  VisibleObject.hpp
lab_03/src/Objects/CareTaker/: ObjectCareTaker.cpp  ObjectCareTaker.hpp  ObjectMemento.cpp  ObjectMemento.hpp
lab_03/src/Objects/Composite/: CompositeObject.cpp  CompositeObject.hpp  ObjectComposite.cpp  ObjectComposite.hpp
lab_03/src/Objects/Invisible/: InvisibleObject.hpp
lab_03/src/Objects/Visible/: VisibleObject.cpp  VisibleObject.hpp
lab_03/src/Objects/Visible/Models/: Model.hpp
lab_03/src/QtInterface/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_03/src/QtInterface/AppLogic/: AppData.cpp  AppData.hpp  AppLogic.cpp  AppLogic.hpp  Data.cpp  Data.hpp  Logic.cpp  Logic.hpp
lab_03/src/Scene/: Cameras.cpp  Cameras.hpp  Scene.cpp  Scene.hpp
lab_03/src/Sources/: Source.hpp
lab_03/src/Sources/String/: StringSource.cpp  StringSource.hpp
lab_03/src/Sources/Txt/: TxtFileSource.cpp  TxtFileSource.hpp
lab_03/src/Transformations/: Transformer.cpp  Transformer.hpp  TransformerCreator.cpp  TransformerCreator.hpp
lab_03/src/Transformations/Factories/: Factory.hpp  MoveFactory.cpp  MoveFactory.hpp  ScaleFactory.cpp  ScaleFactory.hpp
lab_03/src/Transformations/Move/: Move.cpp  Move.hpp
lab_03/src/Transformations/Rotation/: Rotate.cpp  Rotate.hpp
lab_03/src/Transformations/Scale/: Scale.cpp  Scale.hpp
lab_03/src/Visitors/: Visitor.hpp
lab_03/src/Visitors/Draw/: DrawVisitor.cpp  DrawVisitor.hpp
lab_03/src/Visitors/Tranform/: TransformVisitor.cpp
lab_03/src/Visitors/Transform/: TransformVisitor.cpp  TransformVisitor.hpp
lab_03/src/WireframeModel/: WireframeModel.cpp  WireframeModel.hpp
lab_03/src/WireframeModel/WireframeModelImplementation/: Edge.cpp  Edge.hpp  Implementation.cpp  Implementation.hpp
(+198 files in other folders)
